--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asrorbek</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Nafis</title>
 </head>
 <body>
     <header class="header">
         <div class="container">
+            <div class="header__container">
+                <a class="header__logo-link" href="index.html"><img class="header__logo-img" src="./img/logo.svg" alt="Logotype of this Web Page"></a>
 
+                <nav class="navbar">
+                    <ul class="header__list">
+                        <li class="header__item"><a class="header__item-link header__item-link--active" href="#">Главный</a></li>
+                        <li class="header__item"><a class="header__item-link" href="#">О нас</a></li>
+                        <li class="header__item"><a class="header__item-link" href="#">Наши проекты</a></li>
+                        <li class="header__item"><a class="header__item-link" href="#">Контакты</a></li>
+                    </ul>
+                </nav>
+
+                <ul class="header__right-list">
+                    <li class="header__ru"><a class="header__ru-link header__ru-link--active" href="#">Ру</a></li>
+                    <li class="header__ru"><a class="header__ru-link" href="#">Uz</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
@@ -17,7 +34,155 @@
         <section class="hero">
             <div class="container">
                 <div class="hero__container">
+                    <h2 class="hero__heading">Функция, Комфорт, Элегантность.</h2>
 
+                    <form class="hero__form">
+                        <label class="hero__label">
+                            <h3 class="hero__label-heading">Подать Заявку</h3>
+
+                            <input type="text" name="name" id="name" class="hero__input" placeholder="Введите ваше имя">
+                            <input type="tel" name="tel" id="tel" class="hero__input" placeholder="Ваш номер телефона">
+                            <select name="hero__option" id="hero__input-option" class="hero__input">
+                                <option value="Something">Выберите услугу</option>
+                            </select>
+
+                            <textarea class="hero__textarea" name="hero__textarea" id="textarea" cols="30" placeholder="Комментарий..." rows="3"></textarea>
+
+                            <button class="hero__btn">Отправить</button>
+                        </label>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <section class="why">
+            <div class="container">
+                <div class="why__container">
+                    <h3 class="why__heading">Почему мы?</h3>
+
+                    <ul class="why__list">
+                        <li class="why__item">
+                            <h4 class="why__item-heading">Квалифицированные специалисты</h4>
+
+                            <p class="why__item-text">Принято считать, что специалисты стоят дорого, но если посчитать все издержки, возникшие от горе-мастеров, то в итоге выходит дешевле</p>
+                        </li>
+
+                        <li class="why__item">
+                            <h4 class="why__item-heading">Квалифицированные специалисты</h4>
+
+                            <p class="why__item-text">Принято считать, что специалисты стоят дорого, но если посчитать все издержки, возникшие от горе-мастеров, то в итоге выходит дешевле</p>
+                        </li>
+
+                        <li class="why__item">
+                            <h4 class="why__item-heading">Квалифицированные специалисты</h4>
+
+                            <p class="why__item-text">Принято считать, что специалисты стоят дорого, но если посчитать все издержки, возникшие от горе-мастеров, то в итоге выходит дешевле</p>
+                        </li>
+
+                        <li class="why__item">
+                            <h4 class="why__item-heading">Квалифицированные специалисты</h4>
+
+                            <p class="why__item-text">Принято считать, что специалисты стоят дорого, но если посчитать все издержки, возникшие от горе-мастеров, то в итоге выходит дешевле</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="standart">
+            <div class="container">
+                <div class="standart__container">
+                    <img src="./img/standart-jpg.jpg" alt="standart img" class="standart__img">
+
+                    <div class="standart__wrapper">
+                        <h4 class="standart__heading">Установливаем высокие стандарты</h4>
+
+                        <ul class="standart__top-list">
+                            <li class="standart__t-item">
+                                <h4 class="standart__t-item-heading">15</h4>
+
+                                <p class="standart__t-item-text">Лет опытa в отрасли строительства</p>
+                            </li>
+
+                            <li class="standart__t-item">
+                                <h4 class="standart__t-item-heading">2</h4>
+
+                                <p class="standart__t-item-text">года <br> Гарантия на ремонтые услуги</p>
+                            </li>
+                        </ul>
+
+                        <ul class="standart__bottom-list">
+                            <li class="standart__b-item">
+                                <h4 class="standart__b-item-heading">40</h4>
+
+                                <p class="standart__b-item-text">Опытных экспертов</p>
+                            </li>
+
+                            <li class="standart__b-item">
+                                <h4 class="standart__b-item-heading">10</h4>
+
+                                <p class="standart__b-item-text">Завершенных проектов</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="project">
+            <div class="container">
+                <div class="project__container">
+                    <h3 class="project__heading">Наши проекты</h3>
+
+                    <ul class="project__list">
+                        <li class="project__item">
+                            <div class="project__wrapper">
+                                <div class="project__text-wrapper">
+                                    <p class="project__place">Tashkent</p>
+
+                                    <span class="project__vector"></span>
+                                </div>
+
+                                <h4 class="project__inner-heading">ЖК “Boulevard”</h4>
+                            </div>
+                        </li>
+
+                        <li class="project__item">
+                            <div class="project__wrapper">
+                                <div class="project__text-wrapper">
+                                    <p class="project__place">Tashkent</p>
+
+                                    <span class="project__vector"></span>
+                                </div>
+
+                                <h4 class="project__inner-heading">ЖК “Boulevard”</h4>
+                            </div>
+                        </li>
+
+                        <li class="project__item">
+                            <div class="project__wrapper">
+                                <div class="project__text-wrapper">
+                                    <p class="project__place">Tashkent</p>
+
+                                    <span class="project__vector"></span>
+                                </div>
+
+                                <h4 class="project__inner-heading">ЖК “Boulevard”</h4>
+                            </div>
+                        </li>
+
+                        <li class="project__item">
+                            <div class="project__wrapper">
+                                <div class="project__text-wrapper">
+                                    <p class="project__place">Tashkent</p>
+
+                                    <span class="project__vector"></span>
+                                </div>
+
+                                <h4 class="project__inner-heading">ЖК “Boulevard”</h4>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
