--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
                         
                         <li class="footer__main-item">
                             <p class="footer__main-item-heading">Наши проекты</p>
-                            <a href="#" class="footer__main-item-link">ЖК Boulevard</a>
-                            <a href="#" class="footer__main-item-link">ЗД “Oq Tosh”</a>
-                            <a href="#" class="footer__main-item-link">ЖК Zenith</a>
-                            <a href="#" class="footer__main-item-link">ЖК Darkhan</a>
+                            <a href="./boulevard.html" class="footer__main-item-link">ЖК Boulevard</a>
+                            <a href="./oqtosh.html" class="footer__main-item-link">ЗД “Oq Tosh”</a>
+                            <a href="./zenit.html" class="footer__main-item-link">ЖК Zenith</a>
+                            <a href="./darxon.html" class="footer__main-item-link">ЖК Darkhan</a>
                         </li>
                         
                         <li class="footer__main-item">
